--- a/app/pages/lugar/lugar.html
+++ b/app/pages/lugar/lugar.html
@@ -20,8 +20,9 @@
         <ion-grid>
            <ion-row center>
 
-               <ion-col width-50><!-- <img [src]="base64Image" *ngIf="base64Image" /> -->
-                   <img [src]="base64Image" />
+               <ion-col width-50>
+                   <img #imagenBASEhtml [src]="base64Image" *ngIf="base64Image" />
+                   <!-- <img [src]="base64Image" /> -->
                </ion-col>
                <ion-col width-50>
                    <button (click)="presentActionSheet()">
@@ -33,18 +34,24 @@
         </ion-grid>
         <ion-list>
             <ion-item>
-                <ion-input type="text" placeholder="Nombre"></ion-input>
+                <ion-input type="text" [(ngModel)]="nombre" placeholder="Nombre"></ion-input>
             </ion-item>
             <ion-item>
                 <ion-input [(ngModel)]="direccion" type="text" placeholder="Dirección" (input)="getCoordenadas()"></ion-input>
                  <ion-icon name="locate" item-right (click)="getGPS()"></ion-icon>
             </ion-item>
-            <ion-item *ngFor="let lugar of foundDirecciones" (click)="setDireccion(lugar)">{{ lugar.formatted_address }}</ion-item>
+            <ion-item *ngFor="let foundDireccion of foundDirecciones" (click)="setDireccion(foundDireccion)">{{ foundDireccion.formatted_address }}</ion-item>
             <ion-item>
-                <ion-input type="text" placeholder="Teléfono"></ion-input>
+                <ion-input type="text" [(ngModel)]="telefono" placeholder="Teléfono"></ion-input>
             </ion-item>
-            <ion-item >
-                <p></p>
+            <ion-item>
+                <ion-select placeholder="categoria" [(ngModel)]="categoria" multiple="true" cancelText="Cancelar" okText="Seleccionar">
+                    <ion-option value="que_visitar" >Que visitar</ion-option>
+                    <ion-option value="donde_comer">Donde comer</ion-option>
+                    <ion-option value="donde_dormir">Donde dormir</ion-option>
+                    <ion-option value="que_hacer">Que hacer</ion-option>
+                    <ion-option value="pueblos">Pueblos</ion-option>
+                </ion-select>
             </ion-item>
         </ion-list>
 
@@ -52,4 +59,10 @@
             <ion-icon name="send" ></ion-icon>
                        Registrar
         </button>
+        <ion-list>
+         <ion-item *ngFor="let lugar of lugares">
+             {{lugar.id}} {{lugar.nombre}}
+         </ion-item>
+     </ion-list>
 </ion-content>
+<canvas #imagenCANVAS></canvas>
