--- a/app/pages/lista-lugares/lista-lugares.html
+++ b/app/pages/lista-lugares/lista-lugares.html
@@ -1,44 +1,37 @@
 <!--
-  Generated template for the ListaLugaresPage page.
+Generated template for the ListaLugaresPage page.
 
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
+See http://ionicframework.com/docs/v2/components/#navigation for more info on
+Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-      <button menuToggle>
+    <button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>listaLugares</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 <ion-content class="cards-bg">
-
   <ion-card *ngFor="let lugar of lugares">
-
     <img src="{{ lugar.imagen }}" />
-
     <ion-card-content>
       <h2 class="card-title">
         {{lugar.nombre}}
       </h2>
       <p>
-        {{lugar.id}} 
+        {{lugar.id}}
       </p>
     </ion-card-content>
-
     <ion-row no-padding>
       <ion-col>
         <button clear small danger>
           <ion-icon name='star'></ion-icon>
-           {{lugar.telefono}}
+          {{lugar.telefono}}
         </button>
       </ion-col>
       <ion-col text-center>
-        <button clear small danger>
+        <button clear small danger>øøøøø
           <ion-icon name='musical-notes'></ion-icon>
           {{lugar.categoria }}
         </button>
@@ -50,10 +43,5 @@
         </button>
       </ion-col>
     </ion-row>
-
   </ion-card>
-
-  
-
-
 </ion-content>
